--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,20 +2,23 @@ name: firenotes
 version: 1.0.0+1
 publish_to: none
 description: A new Flutter project.
-environment: 
+environment:
   sdk: '>=2.17.3 <3.0.0'
 
-dependencies: 
+dependencies:
+  cloud_firestore: ^3.4.6
   cupertino_icons: ^1.0.2
+  firebase_auth: 3.7.0
+  firebase_core: 1.21.1
+  firebase_storage: ^10.3.7
+  flutter:
+    sdk: flutter
   get: 4.6.5
-  flutter: 
-    sdk: flutter
 
-dev_dependencies: 
+dev_dependencies:
   flutter_lints: ^2.0.0
-  flutter_test: 
+  flutter_test:
     sdk: flutter
 
-flutter: 
+flutter:
   uses-material-design: true
-
