--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
     sdk: flutter
   get: 4.6.5
   get_storage: ^2.0.3
+  image_picker: ^0.8.5+3
   intl: ^0.17.0
 
 dev_dependencies:
