--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,17 +6,17 @@ environment:
   sdk: '>=2.17.3 <3.0.0'
 
 dependencies:
-  cloud_firestore: ^3.4.6
+  cloud_firestore: ^4.3.1
   cupertino_icons: ^1.0.2
-  firebase_auth: 3.7.0
-  firebase_core: 1.21.1
-  firebase_storage: ^10.3.7
+  firebase_auth: ^4.2.2
+  firebase_core: ^2.4.1
+  firebase_storage: ^11.0.10
   flutter:
     sdk: flutter
   get: 4.6.5
   get_storage: ^2.0.3
   image_picker: ^0.8.5+3
-  intl: ^0.17.0
+  intl: ^0.18.0
 
 dev_dependencies:
   flutter_lints: ^2.0.0
