--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -6,22 +6,23 @@ environment:
   sdk: '>=2.17.3 <3.0.0'
 
 dependencies:
-  cloud_firestore: ^4.3.1
-  cupertino_icons: ^1.0.2
-  firebase_auth: ^4.2.2
-  firebase_core: ^2.4.1
-  firebase_storage: ^11.0.10
+  cloud_firestore: ^4.13.1
+  cupertino_icons: ^1.0.6
+  firebase_auth: ^4.14.0
+  firebase_core: ^2.22.0
+  firebase_storage: ^11.5.1
   flutter:
     sdk: flutter
-  flutter_staggered_grid_view: ^0.6.2
-  get: 4.6.5
-  get_storage: ^2.0.3
-  google_fonts: ^4.0.0
-  image_picker: ^0.8.5+3
-  intl: ^0.18.0
+  flutter_staggered_grid_view: ^0.7.0
+  get: 4.6.6
+  get_storage: ^2.1.1
+  google_fonts: ^6.1.0
+  image_picker: ^1.0.4
+  intl: ^0.18.1
 
 dev_dependencies:
-  flutter_lints: ^2.0.0
+  change_app_package_name: ^1.1.0
+  flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
 
